fix: scroll bug
This fixes the bug that would not allow users to scroll when content overflowed.

--- a/portfolio-client/src/app/styles/globals.css
+++ b/portfolio-client/src/app/styles/globals.css
@@ -22,7 +22,7 @@ body {
     -moz-osx-font-smoothing: grayscale;
     margin: 0;
     min-height: 100vh;
-    overflow: hidden;
+    overflow: scroll;
     /*background-color: #050505;*/
     display: flex;
     align-items: center;
